fix: Modal location on small height screens

--- a/src/pages/ComponentModal.scss
+++ b/src/pages/ComponentModal.scss
@@ -1,7 +1,15 @@
+@import '../theme/variables.scss';
+
 .ComponentModal {
     .modal-wrapper {
         min-width: 90%;
         min-height: 80%;
+        max-height: 95%;
         border-radius: 15px;
+        @media only screen and (max-height: 600px) {
+            position: absolute;
+            top: 15px;
+            padding-bottom: 20px;
+        }
     }
 }
